--- a/opath/path.html
+++ b/opath/path.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="en" dir="ltr">
 <head>
   <script src="Slime/p5.js"></script>
   <script src="Slime/p5.sound.min.js"></script>
@@ -8,22 +7,11 @@
   <meta charset="utf-8">
   <script src="Slime/p5.js-svg@1.1.1"></script>
   <title>p5 Webbo</title>
-  <script src="Slime/sketch.js"></script>
-  <script src="Slime/nodes.js"></script>
+  <script src="opath/wave.js"></script>
+
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 </head>
+  <body>
 
-<body>
-  <div class="content list">
-    <button class = "projects" type="button" name="button" onclick="window.location.href='opath/path.html'">Optical Path</button>
-  </div>
-  <div class="content">
-    <p>Awesomeness is just few moments away! Check back soon :-)!
-    </p>
-  </div>
-  <div class="header">
-    <h2>p5.js + Web Dev</h2>
-  </div>
-</body>
-
+  </body>
 </html>
