--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <div class="content list">
-    <button class = "projects" type="button" name="button" onclick="window.location.href='opath/path.html'">Optical Path</button>
+    <button class="projects" type="button" name="button" onclick="window.location.href='path.html'">Optical Path</button>
   </div>
   <div class="content">
     <p>Awesomeness is just few moments away! Check back soon :-)!
