does it even work

--- a/index.html
+++ b/index.html
@@ -10,12 +10,15 @@
   <title>p5 Webbo</title>
   <script src="Slime/sketch.js"></script>
   <script src="Slime/nodes.js"></script>
+  <script src="list.js"></script>
+  <!-- <script src="backgrounds/op.js"></script> -->
+
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 </head>
 
 <body>
   <div class="content list">
-    <button class="projects" type="button" name="button" onclick="window.location.href='path.html'">Optical Path</button>
+    <!-- <button class="projects" type="button" name="button" onclick="window.location.href='path.html'">Optical Path</button> -->
   </div>
   <div class="content">
     <p>Awesomeness is just few moments away! Check back soon :-)!
