buttons work now and fields added

--- a/index.html
+++ b/index.html
@@ -19,14 +19,16 @@
 
 <body>
   <div class="content list">
+    <button type="button" name="button" class ="node" id = "laser" onclick="window.location.href='path.html'">Optical Path</button>
+    <button type="button" name="button" class ="node" id = "higgs" onclick="window.location.href='fields.html'">x3charge EM Field</button>
     <!-- <button class="projects" type="button" name="button" onclick="window.location.href='path.html'">Optical Path</button> -->
   </div>
   <div class="content">
-    <p>Still Loading the stuff in ! Check back soon :)
+    <p>Optical path is still cooking, check back soon :)
     </p>
   </div>
   <div class="header">
-    <h2>p5.js + Web Dev</h2>
+    <h2>Psynapse</h2>
   </div>
 </body>
 
